# Scolteh_test

./: .gitignore  alembic.ini  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 1eb8d37dd218_table_initial.py
app/v1/: .env  database.py  main.py  models.py  schemas.py  services.py
public/: weather_data_14-10-2024 17-53-34.xlsx  weather_data_14-10-2024 18-07-16.xlsx
