[tool.poetry]
name = "scolteh-test"
version = "0.1.0"
description = "Test task for scolteh"
authors = ["Popkov D.V."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.35"}
asyncpg = "^0.29.0"
fastapi = "^0.115.2"
alembic = "^1.13.3"
aiohttp = "^3.10.10"
uvicorn = "^0.31.1"
pydantic = "^2.9.2"
pandas = "^2.2.3"
pydantic-settings = "^2.5.2"
openpyxl = "^3.1.5"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
SQLAlchemy = {extras = ["asyncpg"], version = "^2.0.35"}
asyncpg = "^0.29.0"
fastapi = {extras = ["standard"], version = "^0.115.2"}
alembic = "^1.13.3"
aiohttp = "^3.10.10"
uvicorn = "^0.31.1"
pydantic = "^2.9.2"
pandas = "^2.2.3"
pydantic-settings = "^2.5.2"
black = "^24.10.0"
openpyxl = "^3.1.5"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
